--- a/examples/llm_inference/js/index.html
+++ b/examples/llm_inference/js/index.html
@@ -15,7 +15,7 @@ limitations under the License. -->
 <!doctype html>
 <html lang="en">
 <head>
-    <title>BYOM-Web Demo</title>
+    <title>LLM Inference Web Demo</title>
 </head>
 <body>
     Input:<br />
