--- a/examples/llm_inference/hugging_face_js/gemma_3n/index.html
+++ b/examples/llm_inference/hugging_face_js/gemma_3n/index.html
@@ -33,7 +33,7 @@ limitations under the License.
         {
             "imports": {
                 "@huggingface/hub": "https://cdn.jsdelivr.net/npm/@huggingface/hub@0.21.0/+esm",
-                "@mediapipe/tasks-genai": "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-genai/+esm",
+                "@mediapipe/tasks-genai": "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-genai/+esm"
             }
         }
     </script>
