--- a/examples/llm_inference/hugging_face_js/gemma_3n/index.html
+++ b/examples/llm_inference/hugging_face_js/gemma_3n/index.html
@@ -58,6 +58,7 @@ limitations under the License.
         <video id="webcam" autoplay playsinline muted></video>
         <p id="status-message">Requesting camera access...</p>
       </div>
+      <p class="disclaimer">This is a demonstration for illustrative purposes and is not a Google product.</p>
       <div
         id="response-container"
         class="response-container"
