Separate video and audio streams and add E4B/E2B toggle button

--- a/examples/llm_inference/hugging_face_js/gemma_3n/index.html
+++ b/examples/llm_inference/hugging_face_js/gemma_3n/index.html
@@ -56,6 +56,10 @@ limitations under the License.
       <button id="clear-cache-button" title="Clear model cache">
         <i class="fa-solid fa-trash"></i>
       </button>
+      <div class="version-info">
+        <span id="version-text"></span>
+        <button id="toggle-version-button"></button>
+      </div>
       <div class="title-container">
         <h1>Gemma 3n Multimodal Demo</h1>
       </div>
