Make sure title and E2B/E4B are always visible

--- a/examples/llm_inference/hugging_face_js/gemma_3n/index.html
+++ b/examples/llm_inference/hugging_face_js/gemma_3n/index.html
@@ -56,11 +56,11 @@ limitations under the License.
       <button id="clear-cache-button" title="Clear model cache">
         <i class="fa-solid fa-trash"></i>
       </button>
-      <div class="version-info">
+      <div class="version-info" id="version-info">
         <span id="version-text"></span>
         <button id="toggle-version-button"></button>
       </div>
-      <div class="title-container">
+      <div class="title-container" id="title-container">
         <h1>Gemma 3n Multimodal Demo</h1>
       </div>
       <div class="video-container">
