--- a/examples/llm_inference/js/index.html
+++ b/examples/llm_inference/js/index.html
@@ -26,7 +26,7 @@ limitations under the License. -->
     <br />
     <br />
     Result:<br />
-    <textarea id="output" style="height: 300px; width: 600px"></textarea>
+    <textarea id="output" style="height: 300px; width: 600px" readonly></textarea>
     <script type="module">
 // For real web apps, the script would be included as a separate file. We inline
 // it into the HTML here so the code can stay of type "module" while still
